--- a/4/Assignment 4.tex
+++ b/4/Assignment 4.tex
@@ -133,6 +133,12 @@ false on both $u_k,u_m$.
 In the second case we have that for $u_n\neq u_k,u_m$, $l_k \text{ or }\neg l_k$
 has to be false, but than either $c_k \text{ or } c_l$ is false on $u_n$.
 
+\subsection*{d)}
+%https://ac.els-cdn.com/0020019096000841/1-s2.0-0020019096000841-main.pdf?_tid=7e70d894-4d2c-4da7-be90-e60f3fd8fa26&acdnat=1525862694_d205ac3414c033b4e77e7b255ee3c056
+
+%http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.54.8523&rep=rep1&type=pdf
+
+
 
 \section*{Exercise 4}
 Observing a set of variables in $\{0,1\}^n$ we see, that there are $n+1$ different variables for a symmetric function which are different in the amount of 1's: \\ ${(0,0,..., 0), (1,0,..., 0), (1,1,..., 0), ... (1,1,1, ... 1)}$ \\
