--- a/4/Assignment 4.tex
+++ b/4/Assignment 4.tex
@@ -140,7 +140,7 @@ has to be false, but than either $c_k \text{ or } c_l$ is false on $u_n$.
 $VCdim(\mathcal{H}_{mcon}^d) \leq d$ as $VCdim(\mathcal{H}_{con}^d) \leq d$ (as shown in $3c$) and $\mathcal{H}_{mcon}^d \subseteq \mathcal{H}_{con}^d$. \\
 
 $VCdim(\mathcal{H}_{mcon}^d) \geq d$ as
-there exist $d$ different inputs which we can label arbitrary by choosing an appropriate $h_{mcon}^d \in \mathcal{H}_{mcon}^d$. E.g. Let $s_1, s_2, ..., s_{d}$ be a sequence of inputs. If an input $s_i$ has to be labeled with $0$, you have to choose a hypothesis which includes variables $x_j$ whose value is set to $0$ in current input and is set to $1$ in other inputs $s_k$ (with $k \in \{1, ... d\}$ and $s\neq k$) if $s_k$ have to be labeled with $1$.
+there exist $d$ different inputs which we can label arbitrary by choosing an appropriate $h_{mcon}^d \in \mathcal{H}_{mcon}^d$. E.g. Let $s_1, s_2, ..., s_{d}$ be a sequence of inputs. If an input $s_i$ has to be labeled with $0$, you have to choose a hypothesis which includes variables $x_j$ whose value is set to $0$ in $s_i$ and is set to $1$ in other inputs $s_k$ (with $k \in \{1, ... d\}$ and $s\neq k$) if $s_k$ have to be labeled with $1$.
 
 So $VCdim(\mathcal{H}_{mcon}^d) = d$ 
 
